Fix vertical images not covering project title

--- a/styles/pages/project.css
+++ b/styles/pages/project.css
@@ -204,7 +204,7 @@
   pointer-events: none;
 
   margin: 0 auto;
-  margin-left: 15.5%;
+  margin-left: 0;
 }
 
 .video-container {
